Import of MSTRAT/HTML-Barcode-Code93-0.11 from CPAN.
gitpan-cpan-distribution: HTML-Barcode-Code93
gitpan-cpan-version:      0.11
gitpan-cpan-path:         MSTRAT/HTML-Barcode-Code93-0.11.tar.gz
gitpan-cpan-author:       MSTRAT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,13 @@ abstract: 'Generate HTML representations of Code 93 barcodes'
 author:
   - 'Mark A. Stratman, C<< <stratman@gmail.com> >>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
+  Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 1.01'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,10 +25,10 @@ requires:
   Barcode::Code93: 0.02
   HTML::Barcode: 0.09
 resources:
-  homepage: http://github.com/mstratman/HTML-Barcode-Code93/tree
+  homepage: https://github.com/mstratman/HTML-Barcode-Code93/tree
   license: http://dev.perl.org/licenses/
   repository:
     type: git
     url: git://github.com/mstratman/HTML-Barcode-Code93.git
-    web: http://github.com/mstratman/HTML-Barcode-Code93/tree
-version: 0.10
+    web: https://github.com/mstratman/HTML-Barcode-Code93/tree
+version: 0.11
