Import of MSTRAT/HTML-Barcode-Code93-0.12 from CPAN.
gitpan-cpan-distribution: HTML-Barcode-Code93
gitpan-cpan-version:      0.12
gitpan-cpan-path:         MSTRAT/HTML-Barcode-Code93-0.12.tar.gz
gitpan-cpan-author:       MSTRAT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -25,10 +25,6 @@ requires:
   Barcode::Code93: 0.02
   HTML::Barcode: 0.09
 resources:
-  homepage: https://github.com/mstratman/HTML-Barcode-Code93/tree
   license: http://dev.perl.org/licenses/
-  repository:
-    type: git
-    url: git://github.com/mstratman/HTML-Barcode-Code93.git
-    web: https://github.com/mstratman/HTML-Barcode-Code93/tree
-version: 0.11
+  repository: git://github.com/mstratman/HTML-Barcode-Code93.git
+version: 0.12
